Add functioning main menu

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		/>
 	</head>
 	<body>
+		<div class="main-menu">
+			<button class="start">Start</button>
+		</div>
 		<div class="container">
 			<h1 class="turn jersey-10-regular"></h1>
 			<div class="board"></div>
