Players can pick their names

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 	</head>
 	<body>
 		<div class="main-menu">
+			<div class="player-info">
+				<div>
+					<label for="player-one">Player one:</label>
+					<input type="text" id="player-one" name="player-one" />
+				</div>
+				<div>
+					<label for="player-two">Player two:</label>
+					<input type="text" id="player-two" name="player-two" />
+				</div>
+			</div>
 			<button class="start">Start</button>
 		</div>
 		<div class="container">
