--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 			<h1 class="turn jersey-10-regular"></h1>
 			<div class="board"></div>
 		</div>
+		<div class="result-screen">
+			<h1></h1>
+			<button class="restart">Restart</button>
+		</div>
 		<script src="app.js"></script>
 	</body>
 </html>
