--- a/index.html
+++ b/index.html
@@ -13,27 +13,37 @@
 		/>
 	</head>
 	<body>
-		<div class="main-menu">
+		<div class="main-menu jersey-10-regular">
 			<div class="player-info">
 				<div>
 					<label for="player-one">Player one:</label>
-					<input type="text" id="player-one" name="player-one" />
+					<input
+						type="text"
+						class="jersey-10-regular"
+						id="player-one"
+						name="player-one"
+					/>
 				</div>
 				<div>
 					<label for="player-two">Player two:</label>
-					<input type="text" id="player-two" name="player-two" />
+					<input
+						type="text"
+						class="jersey-10-regular"
+						id="player-two"
+						name="player-two"
+					/>
 				</div>
 			</div>
-			<button class="start">Start</button>
+			<button class="start jersey-10-regular">Start</button>
 		</div>
 		<div class="container">
 			<h1 class="turn jersey-10-regular"></h1>
 			<div class="board"></div>
 		</div>
-		<div class="result-screen">
+		<!-- <div class="result-screen">
 			<h1></h1>
 			<button class="restart">Restart</button>
-		</div>
+		</div> -->
 		<script src="app.js"></script>
 	</body>
 </html>
