--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 		<div class="container">
 			<h1 class="turn jersey-10-regular"></h1>
 			<div class="board"></div>
+			<div class="restart">
+				<button class="restart-button">Restart</button>
+			</div>
 		</div>
-		<!-- <div class="result-screen">
-			<h1></h1>
-			<button class="restart">Restart</button>
-		</div> -->
+
 		<script src="app.js"></script>
 	</body>
 </html>
