Add placeholder for name inputs

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 						class="jersey-10-regular"
 						id="player-one"
 						name="player-one"
+						placeholder="Player One"
 					/>
 				</div>
 				<div>
@@ -31,6 +32,8 @@
 						class="jersey-10-regular"
 						id="player-two"
 						name="player-two"
+						placeholder="Player Two"
+						defaultValue="Player Two"
 					/>
 				</div>
 			</div>
